# snake

./: .gitignore  CMakeLists.txt  README.md  main.c
include/glad/: glad.h
resources/: fragment.shader  vertex.shader
src/: VBuffer.c  VBuffer.h  glad.c  main.c  shader.c  shader.h  snakeObject.c  snakeObject.h
